[tool.poetry]
name = "notolog"
version = "1.1.9"
description = "Notolog - Python Markdown Editor"
authors = ["Vadim Bakhrenkov"]
license = "MIT"
readme = "README.md"
include = [
    "CHANGELOG.md",
    "CODE_OF_CONDUCT.md",
    "LICENSE",  # auto-included
    "README.md",  # auto-included
    "ThirdPartyNotices.md",
    "dev_install.py",
    "docs/**/*",
    "notolog/lexemes/**/*",
    "notolog/assets/**/*",
    "notolog/modules/**/*",
    "tests/**/*",
    ".coveragerc",
]
exclude = ["**/__pycache__", "**/*.pyc"]
homepage = "https://notolog.app"
repository = "https://github.com/notolog/notolog-editor"
keywords = [
    "notolog",
    "python",
    "markdown",
    "editor",
    "ai",
    "llm",
    "text",
    "notes",
    "pyside6",
    "qt",
    "gguf",
    "onnx",
    "llama-cpp",
    "local-llm",
    "privacy",
    "encryption",
    "note-taking",
    "syntax-highlighting",
    "ai-assistant",
    "on-device-llm",
    "offline-ai",
    "phi-4",
    "mistral",
    "qwen",
    "writing-assistant",
    "markdown-editor",
    "cross-platform",
    "open-source",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Text Editors",
    "Topic :: Text Editors :: Documentation",
    "Topic :: Text Editors :: Emacs",
    "Topic :: Text Editors :: Integrated Development Environments (IDE)",
    "Topic :: Text Editors :: Text Processing",
    "Topic :: Text Editors :: Word Processors",
    "Topic :: Text Processing",
    "Topic :: Text Processing :: General",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Natural Language :: Chinese (Simplified)",
    "Natural Language :: Dutch",
    "Natural Language :: English",
    "Natural Language :: Finnish",
    "Natural Language :: French",
    "Natural Language :: Georgian",
    "Natural Language :: German",
    "Natural Language :: Greek",
    "Natural Language :: Hindi",
    "Natural Language :: Indonesian",
    "Natural Language :: Italian",
    "Natural Language :: Japanese",
    "Natural Language :: Korean",
    "Natural Language :: Latin",
    "Natural Language :: Portuguese",
    "Natural Language :: Russian",
    "Natural Language :: Spanish",
    "Natural Language :: Swedish",
    "Natural Language :: Turkish",
]

[tool.poetry.scripts]
notolog = "notolog.app:main"

[tool.poetry.urls]
Documentation = "https://notolog.app"
Changelog = "https://github.com/notolog/notolog-editor/blob/main/CHANGELOG.md"
IssueTracker = "https://github.com/notolog/notolog-editor/issues"

[tool.poetry.dependencies]
python = ">=3.10,<3.15"
cffi = ">=1.17.0"
click = "^8.1.7"
cryptography = ">=43.0.1"
emoji = "^2.14.0"
iniconfig = "^2.0.0"
Markdown = "^3.7"
packaging = ">=24.0"
pluggy = "^1.5.0"
pycparser = "^3.0"
Pygments = "^2.18.0"
PySide6_Essentials = ">=6.8.0.2"
qasync = ">=0.27.1"
shiboken6 = ">=6.8.0.2"
tomli = "^2.0.1"
tomli_w = "^1.0.0"
typing_extensions = "^4.12.0"
numpy = "^2.1.0"
onnxruntime-genai = { version = ">=0.11.0,<1.0.0", markers = "python_version >= '3.10' and python_version < '3.14'" }
# Note: CUDA and DirectML variants of onnxruntime-genai are separate packages
# that REPLACE the base package (they cannot be installed together).
# Install manually: pip install --force-reinstall onnxruntime-genai-cuda (or -directml).

[tool.poetry.extras]
llama = ["llama-cpp-python"]

[tool.poetry.dependencies.llama-cpp-python]
version = "^0.3.8"
optional = true

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
mccabe = "^0.7.0"
pycodestyle = "^2.11.1"
pyflakes = "^3.2.0"

[tool.poetry.group.test.dependencies]
coverage = "^7.5.1"
pytest = "^9.0.2"
pytest-asyncio = "^1.3.0"
pytest-cov = ">=5.0.0"
pytest-mock = "^3.14.0"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "ignore::pytest.PytestConfigWarning",
    "ignore::pytest.PytestUnraisableExceptionWarning",
]

[tool.bandit]
exclude_dirs = ["tests", "htmlcov", "site", "docs"]
skips = [
    "B101",  # Skip assert_used (common in tests and validation)
    "B105",  # Skip hardcoded_password_string (false positives: env var names, LLM tokens, empty init)
    "B314",  # Skip xml.etree.ElementTree.fromstring (safe internal use with trusted XML)
    "B405",  # Skip xml.etree import (safe internal use)
    "B404",  # Skip subprocess import (used in dev_install.py dev tool)
    "B603",  # Skip subprocess_without_shell_equals_true (controlled input in dev tool)
]

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"
